--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@types/node": "^25.0.9",
     "@types/nodemailer": "^7.0.5",
+    "@types/papaparse": "^5.5.2",
     "@types/react": "^19.2.8",
     "@types/react-dom": "^19.2.3",
     "clsx": "^2.1.1",
@@ -19,6 +20,7 @@
     "next": "16.1.3",
     "next-themes": "^0.4.6",
     "nodemailer": "^7.0.12",
+    "papaparse": "^5.5.3",
     "react": "19.2.3",
     "react-dom": "19.2.3",
     "tailwind-merge": "^3.4.0",
